Fixed background image alignment

--- a/server/public/assets/styles/myStyles.css
+++ b/server/public/assets/styles/myStyles.css
@@ -11,7 +11,9 @@ body{
   display: block;
   background-image: url('/assets/images/minneapolis1.jpg');
   background-size: cover;
-  height: 100%;
+  background-position: center center;
+  width: 100%;
+  min-height: 100%;
   -webkit-filter: blur(2px);
   -moz-filter: blur(2px);
   -o-filter: blur(2px);
